load images faster, fixed scroll issue on mobile devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -34,7 +34,7 @@ figure {
 img.pic {
     display: block;
 		filter: blur(10px);
-		max-width: 90vw;
+		max-width: 100%;
     max-height: 100vh;
 		margin-left: auto;
 		margin-right: auto;
@@ -62,6 +62,10 @@ img.pic.loaded {
 	div#content {
 		margin-left: 0px;
 	}
+}
+
+nav {
+	overflow-x: hidden;
 }
 
 #menu {
